# sub_pro

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  HANDOFF_2026-04-20_evening.md  HANDOFF_2026-04-21.md  HANDOVER_2026-04-20.md  MIGRATION_TO_G2B_BID_OPTIMIZER.md  MODES.md  README.md  TURSO_SYNC.md  auto_bid_rearchitecture_plan.md  dashboard.py  pyproject.toml  아이디어스.md
g2b_bid_reco/: __init__.py  agency_analysis.py  api.py  backtest.py  cli.py  csv_import.py  data_cleanup.py  db.py  models.py  notice_prediction.py  recommender.py  sample_data.py  simulation.py  strategy_mc.py  strategy_update.py
scripts/: daily-api-collect.sh  disable-launchd.sh  enrich-all-stubs.sh  freeze-sub-pro.sh  launchd-daily-collect.plist.template  publish-db-snapshot.sh  pull-db-snapshot.sh  turso-pull.sh  turso-push.sh
tests/: test_agency_analysis.py  test_api.py  test_backfill.py  test_backtest.py  test_csv_import.py  test_data_cleanup.py  test_notice_prediction.py  test_recommender.py  test_run_tasks.py  test_schema_migrations.py  test_simulation.py  test_strategy_mc.py  test_strategy_update.py
