[project]
name = "g2b-bid-recommender"
version = "0.1.0"
description = "MVP for recommending likely winning bid amounts from G2B procurement history"
requires-python = ">=3.9"

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.30",
    "plotly>=5.18",
    "pandas>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
